schema/testdata/errors/set_attribute_lhs_is_invalid.keel
model Post {
    fields {
        name Text?
        published Boolean?
        identity Identity?
    }

    actions {
        create unknownIdentifier() with (name, published) {
            //expect-error:18:22:AttributeExpressionError:unknown identifier 'name'
            @set(name = "hello")
        }
        create namedInput() with (n: Text, published) {
            //expect-error:18:19:AttributeExpressionError:unknown identifier 'n'
            //expect-error:35:36:ActionInputError:n is not used. Labelled inputs must be used in the action, for example in a @set or @where attribute
            @set(n = post.name)
        }
        create literal() with (name, published) {
            //expect-error:18:25:AttributeExpressionError:The @set attribute can only be used to set model fields
            @set("hello" = post.name)
        }
        create null() with (name, published) {
            //expect-error:18:22:AttributeExpressionError:The @set attribute can only be used to set model fields
            @set(null = post.name)
        }
        create ctx() with (name, published) {
            //expect-error:18:21:AttributeExpressionError:unknown identifier 'ctx'
            @set(ctx.isAuthenticated = post.published)
        }
        create ctxIdentity() with (name, published) {
            //expect-error:18:21:AttributeExpressionError:unknown identifier 'ctx'
            @set(ctx.identity = post.identity)
        }
        create ctxIdentityEmail() with (name, published) {
            //expect-error:18:21:AttributeExpressionError:unknown identifier 'ctx'
            @set(ctx.identity.email = "email")
        }
        create anotherModel() {
            //expect-error:18:27:AttributeExpressionError:unknown identifier 'publisher'
            @set(publisher.name = "email")
        }
    }
}

model Publisher {
    fields {
        name Text
    }
}
